added a tab image

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Copperworks Distillery</title>
+    <link rel="icon" href="img/copperworks.jpeg">
 </head>
 <body>
     <header>
