Changed font style

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Parallax Template - Materialize</title>
+  <title>Copperworks Distilling</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -103,7 +103,7 @@
     <div class="container header-title">
       <div class="center">
         <h3  class="light grey-text text-lighten-4">COPPERWORKS WHISKEY NOW AVAILABLE</h3>
-        <h5 class="light grey-text text-lighten-3">Copperworks American Single Malt Whiskey is made from 100% malted barley, twice-distilled in traditional copper pots stills, and matured for no less than 30 months in full-size, charred, new American Oak barrels.</h5>
+        <h5 id="sub-header" class="light grey-text text-lighten-3">Copperworks American Single Malt Whiskey is made from 100% malted barley, twice-distilled in traditional copper pots stills, and matured for no less than 30 months in full-size, charred, new American Oak barrels.</h5>
       </div>
     </div>
     <ul class="slides">
