--- a/static/index.html
+++ b/static/index.html
@@ -56,7 +56,9 @@
         <li><a class="dropdown-button" href="#!" data-activates="visit">visit</a></li>
         <li><a class="dropdown-button" href="#!" data-activates="thedistillery">the distillery</a></li>
         <li><a class="dropdown-button" href="#!" data-activates="about">about</a></li>
+        <li class="collection-header"><a class="dropdown-button" href="#!" data-activates="about">about</a></li>
         <li><a href="#!">blog</a></li>
+        <li><a class="dropdown-button" href="#!" data-activates="editdatabase">edit database</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav collection with-header">
         <li class="collection-header"><h5>spirits</h5></li>
@@ -94,6 +96,7 @@
         <li class="collection-item"><a href="#!">contact</a></li>
         
         <li class="collection-header"><h5>blog</h5></li>
+        <li class="collection-header"><h5>edit database</h5></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
