Added form to edit database, updated nav to check release database, added release database page

--- a/static/db.html
+++ b/static/db.html
@@ -107,77 +107,10 @@
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
-  
-  <div class="slider">
-    <div class="container header-title">
-      <div class="center">
-        <h3  class="light grey-text text-lighten-4">COPPERWORKS WHISKEY NOW AVAILABLE</h3>
-        <div class="divider"></div>
-        <h5 id="sub-header" class="light grey-text text-lighten-3">Copperworks American Single Malt Whiskey is made from 100% malted barley, twice-distilled in traditional copper pots stills, and matured for no less than 30 months in full-size, charred, new American Oak barrels.</h5>
-      </div>
+
+    <div class="grey darken-4 white-text section">
+        <h2 class=" center">Whiskey Release Database</h2>
     </div>
-    <ul class="slides">
-      <li><img src="img/carousel1.jpeg"></li>
-      <li><img src="img/carousel2.jpeg"></li>
-      <li><img src="img/carousel3.png"></li>
-      <li><img src="img/carousel4.jpeg"></li>
-      <li><img src="img/carousel5.jpeg"></li>
-    </ul>
-  </div>
-
-  <div class="blue-grey lighten-5">
-    <div class="container">
-      <div class="section">
-
-        <div class="row">
-          <div class="col s12 m4">
-            <div class="card hoverable">
-              <div class="card-image">
-                <img src="img/timthumb.jpeg">
-                <span class=" card-title brown-text text-lighten-2 black-trans-bg">BUY OUR SPIRITS ONLINE</span>
-              </div>
-              <div class="card-content">
-                <p>Buy Copperworks spirits, plus cocktail supplies and more, in our online store. We can ship spirits in the U.S. wherever state laws allow.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">Buy Copperworks Spirits Online</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col s12 m4">
-            <div class="card hoverable">
-              <div class="card-image">
-                <img src="img/timthumb2.jpeg">
-                <span class="card-title brown-text text-lighten-2 black-trans-bg">TONIC BARREL IS BACK</span>
-              </div>
-              <div class="card-content">
-                <p>Enjoy a single-cask release of gin that was finished in a barrel with a unique history: aging bourbon, gin, tonic syrup, and now Copperworks Gin.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">Learn about Tonic Barrel Gin</a>
-              </div>
-            </div>
-          </div>
-        
-        <div class="col s12 m4">
-            <div class="card hoverable">
-              <div class="card-image">
-                <img src="img/timthumb3.jpeg">
-                <span class=" card-title brown-text text-lighten-2 black-trans-bg">TAKE A DISTILLERY TOUR</span>
-              </div>
-              <div class="card-content">
-                <p>Get a behind-the-scenes look at our stills, barreling process and fermenters. Learn how distilled spirits are made and enjoy a guided tasting.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">Get tour reservations</a>
-              </div>
-            </div>
-          </div>
-
-      </div>
-    </div>
-  </div>
 
   <footer class="page-footer teal">
     <div class="container">
