--- a/static/editdb.html
+++ b/static/editdb.html
@@ -107,77 +107,135 @@
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
-  
-  <div class="slider">
-    <div class="container header-title">
-      <div class="center">
-        <h3  class="light grey-text text-lighten-4">COPPERWORKS WHISKEY NOW AVAILABLE</h3>
-        <div class="divider"></div>
-        <h5 id="sub-header" class="light grey-text text-lighten-3">Copperworks American Single Malt Whiskey is made from 100% malted barley, twice-distilled in traditional copper pots stills, and matured for no less than 30 months in full-size, charred, new American Oak barrels.</h5>
-      </div>
+
+    <div class="grey darken-4 white-text section">
+        <h2 class=" center">Input Brew Information</h2>
     </div>
-    <ul class="slides">
-      <li><img src="img/carousel1.jpeg"></li>
-      <li><img src="img/carousel2.jpeg"></li>
-      <li><img src="img/carousel3.png"></li>
-      <li><img src="img/carousel4.jpeg"></li>
-      <li><img src="img/carousel5.jpeg"></li>
-    </ul>
-  </div>
+    <div class="row">
+        <form class="col s12 m6 push-m3 section">
 
-  <div class="blue-grey lighten-5">
-    <div class="container">
-      <div class="section">
-
-        <div class="row">
-          <div class="col s12 m4">
-            <div class="card hoverable">
-              <div class="card-image">
-                <img src="img/timthumb.jpeg">
-                <span class=" card-title brown-text text-lighten-2 black-trans-bg">BUY OUR SPIRITS ONLINE</span>
-              </div>
-              <div class="card-content">
-                <p>Buy Copperworks spirits, plus cocktail supplies and more, in our online store. We can ship spirits in the U.S. wherever state laws allow.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">Buy Copperworks Spirits Online</a>
-              </div>
+            <!--Recipe-->
+            <h5 class="col s12">Recipe</h5>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">label_outline</i>
+                    <input id="recipe-name" type="text" class="validate">
+                    <label for="recipe-name">Recipe Name</label>
+                </div>
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">info</i>
+                    <input id="recipe-description" type="text" class="validate">
+                    <label for="recipe-description">Recipe Description</label>
+                </div>
+                <div class="input-field col s5">
+                    <i class="material-icons prefix">today</i>
+                    <input type="date" class="datepicker" id="brew-date">
+                    <label for="brew-date">Brew Date</label>
+                </div>
             </div>
-          </div>
 
-          <div class="col s12 m4">
-            <div class="card hoverable">
-              <div class="card-image">
-                <img src="img/timthumb2.jpeg">
-                <span class="card-title brown-text text-lighten-2 black-trans-bg">TONIC BARREL IS BACK</span>
-              </div>
-              <div class="card-content">
-                <p>Enjoy a single-cask release of gin that was finished in a barrel with a unique history: aging bourbon, gin, tonic syrup, and now Copperworks Gin.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">Learn about Tonic Barrel Gin</a>
-              </div>
+            <!--Brew Extra Data-->
+            <h5 class="col s12">Brew Info</h5>
+            <div class="row">
+                <div class="input-field col s5">
+                    <i class="material-icons prefix">schedule</i>
+                    <input id="boil-time" type="number" placeholder="34" class="validate">
+                    <label for="boil-time">Boil Time (minutes)</label>
+                </div>
+                <div class="input-field col push-s2 s5">
+                    <i class="material-icons prefix">today</i>
+                    <input id="sg" placeholder="12.3456" type="number" class="validate">
+                    <label for="sg">Original Extract (S.G.)</label>
+                </div>
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">mode_edit</i>
+                    <textarea id="brew-notes" placeholder="Hops types, quantities added, etc" class="materialize-textarea"></textarea>
+                    <label for="brew-notes">Special Notes</label>
+                </div>
             </div>
-          </div>
-        
-        <div class="col s12 m4">
-            <div class="card hoverable">
-              <div class="card-image">
-                <img src="img/timthumb3.jpeg">
-                <span class=" card-title brown-text text-lighten-2 black-trans-bg">TAKE A DISTILLERY TOUR</span>
-              </div>
-              <div class="card-content">
-                <p>Get a behind-the-scenes look at our stills, barreling process and fermenters. Learn how distilled spirits are made and enjoy a guided tasting.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">Get tour reservations</a>
-              </div>
-            </div>
-          </div>
 
-      </div>
+            <!--Ingredients-->
+            <h5 class="col s12">Brew Recipe Ingredients:</h5>
+            <div id="ingredients" class="row">
+                <div class="ingredient-row">
+                    <div class="input-field col s5">
+                        <input id="ingredient-name" type="text" class="validate">
+                        <label for="ingredient-name">Name</label>
+                    </div>
+                    <div class="input-field col s5">
+                        <input id="ingredient-source" type="text" class="validate">
+                        <label for="ingredient-source">Source</label>
+                    </div>
+                    <div class="input-field col s2">
+                        <input id="ingredient-%" type="text" class="validate">
+                        <label for="ingredient-%">%</label>
+                    </div>
+                </div>
+                <a id="add-ingredient" class="col s2 offset-s10 btn waves-effect waves-light"><i class="material-icons">add</i></a>
+            </div>
+
+            <h5 class="col s12">Phases:</h5>
+            <div id="phases" class="row">
+                <div class="phase-row">
+                    <div class="input-field col s12">
+                        <select id="phase-select">
+                            <option value="" disabled selected>Choose your option</option>
+                            <option value="fermentation">Fermentation</option>
+                            <option value="washdistil">Wash Distillation</option>
+                            <option value="whiskeydistil">Whiskey Distillation</option>
+                            <option value="mature">Maturation</option>
+                            <option value="barrel">Barreling</option>
+                        </select>
+                        <label>Phase Name</label>
+                    </div>
+                    <div class="phase-info">
+                        <div class="hide fermentation-info">
+                            <div class="input-field col s5">
+                                <input id="ferment-volume" type="text" class="validate">
+                                <label for="ferment-volume">Volume (gal)</label>
+                            </div>
+                            <div class="input-field col push-s2 s5">
+                                <input id="ferment-temp" type="number" class="validate">
+                                <label for="ferment-temp">Fermentation Temp (&#8457;)</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input id="yeast-strain" type="text" class="validate">
+                                <label for="yeast-strain">Yeast Strain</label>
+                            </div>
+                            <div class="input-field col s4">
+                                <input id="ferment-f-days" type="number" class="validate">
+                                <label for="ferment-f-days">Days in Fermentation</label>
+                            </div>
+                            <div class="input-field col s4">
+                                <input id="ferment-abv" type="number" class="validate">
+                                <label for="ferment-abv">Wash Final % ABV</label>
+                            </div>
+                            <div class="input-field col s4">
+                                <input id="ferment-ph" type="number" class="validate">
+                                <label for="ferment-ph">Wash Final pH</label>
+                            </div>
+                            <div class="input-field col s4">
+                                <input id="ferment-ph" type="number" class="validate">
+                                <label for="ferment-ph">Days in Conditioning</label>
+                            </div>
+                            <div class="input-field col s4">
+                                <input id="ferment-ph" type="number" class="validate">
+                                <label for="ferment-ph">Conditioning Temp (&#8457;)</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a id="add-phase" class="col s2 offset-s10 btn waves-effect waves-light"><i class="material-icons">add</i></a>
+            </div>
+            <div class="col s12">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                <i class="material-icons right">send</i>
+                </button>
+            </div>
+        </form>
     </div>
-  </div>
+
+ 
 
   <footer class="page-footer teal">
     <div class="container">
