Edit Release DB page

--- a/static/db.html
+++ b/static/db.html
@@ -108,9 +108,18 @@
     </div>
   </nav>
 
-    <div class="grey darken-4 white-text section">
-        <h2 class=" center">Whiskey Release Database</h2>
-    </div>
+  <div class="grey darken-4 white-text section">
+      <h2 class=" center">Whiskey Release Database</h2>
+  </div>
+
+  <div class="section container">
+    <table>
+      <thead>
+        <th>Release Number:</th>
+        <th>Release Date:</th>
+      </thead>
+    </table>
+  </div>
 
   <footer class="page-footer teal">
     <div class="container">
