Divided the forms. Creating recipe is own form now

--- a/static/db.html
+++ b/static/db.html
@@ -120,7 +120,16 @@
         <th>Release Number:</th>
         <th>Release Date:</th>
       </thead>
+      <tbody>
+        <tr>
+          <td>2352345</td>
+          <td>23/4/14</td>
+        </tr>
+      </tbody>
     </table>
+    <p>
+      TEST : {{brewid}}
+    </p>
   </div>
 
   <footer class="page-footer teal">
