Added names to Inputs, and added body-parser

--- a/static/editdb.html
+++ b/static/editdb.html
@@ -121,7 +121,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">label_outline</i>
-                    <input id="recipe-name" type="text" class="validate" ng-model="bname">
+                    <input name="bname" id="recipe-name" type="text" class="validate" ng-model="bname">
                     <label for="recipe-name">Brew Name</label>
                 </div>
 
@@ -129,11 +129,11 @@
                 <div id="brew" class="row">
                     <div class="ibrew-row">
                         <div class="input-field col s6">
-                            <input id="brew-num" type="text" class="validate" ng-model="bnumber">
+                            <input name="bnumber" id="brew-num" type="text" class="validate" ng-model="bnumber">
                             <label for="brew-num">Brew Number</label>
                         </div>
                         <div class="input-field col s6">
-                            <input id="brew-date" type="date" ng-model="bdate">
+                            <input name="bdate" id="brew-date" type="date" ng-model="bdate">
                         </div>
                     </div>
                 </div>
@@ -144,15 +144,15 @@
                 <div id="ingredients" class="row">
                     <div class="ingredient-row">
                         <div class="input-field col s5">
-                            <input id="ingredient-name" type="text" class="validate" ng-model="iname">
+                            <input name="iname" id="ingredient-name" type="text" class="validate" ng-model="iname">
                             <label for="ingredient-name">Ingredient Name</label>
                         </div>
                         <div class="input-field col s5">
-                            <input id="ingredient-source" type="text" class="validate" ng-model="isource">
+                            <input name="isource" id="ingredient-source" type="text" class="validate" ng-model="isource">
                             <label for="ingredient-source">Ingredient Source</label>
                         </div>
                         <div class="input-field col s2">
-                            <input id="ingredient-%" type="text" class="validate" ng-model="ipercent">
+                            <input name="ipercent" id="ingredient-%" type="text" class="validate" ng-model="ipercent">
                             <label for="ingredient-%">%</label>
                         </div>
                     </div>
